# SCE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: CMakeLists.txt
include/IRCSocket/: CMakeLists.txt  IRCSocket.cpp  IRCSocket.hpp
include/utils/: CMakeLists.txt  README.md  _nsystem.cpp  _nsystem.h  clip.cpp  clip.h  clip.hpp  split.cpp  split.h  syscmd.cpp  syscmd.hpp  utils.h  utils.hpp
lib/: CMakeLists.txt  IRCEval.cpp  IRCEval.hpp  IRCMessage.hpp  SCEBrain.cpp  SCEBrain.hpp  SCEEval.cpp  SCEEval.hpp  SCESocket.cpp  SCESocket.hpp  SCESocketHandler.cpp  SCESocketHandler.hpp  SCESocketIRC.cpp  SCESocketIRC.hpp  split.cpp  split.hpp
lib/Commands/: CMakeLists.txt  IRCCommandJoin.cpp  IRCCommandJoin.hpp  IRCCommandPart.cpp  IRCCommandPart.hpp  SCECommand.hpp  SCECommandCLI.cpp  SCECommandCLI.hpp  SCECommandEightball.cpp  SCECommandEightball.hpp  SCECommandHelp.cpp  SCECommandHelp.hpp  SCECommandSource.cpp  SCECommandSource.hpp  SCECommands.cpp  SCECommands.hpp
lib/InternalCommands/: CMakeLists.txt  split.cpp
lib/irc/: CMakeLists.txt  IRCEval.cpp  IRCEval.hpp
lib/irc/Commands/: CMakeLists.txt  IRCCommandJoin.cpp  IRCCommandJoin.hpp
lib/sce/: CMakeLists.txt  Common.hpp  IRCMessage.hpp  SCE.cpp  SCE.hpp  SCEEval.cpp  SCEEval.hpp  SCESocket.cpp  SCESocket.hpp
src/: CMakeLists.txt  main.cpp
