# <Nathan Bass>. Copyright (C) <2014(s)>. <MIT>.

#
# Project Properties
#
CMAKE_MINIMUM_REQUIRED (VERSION 2.6.2)
PROJECT (sce)
SET (APPLICATION_NAME "SCE")
SET (APPLICATION_CODENAME "${PROJECT_NAME}")
SET (APPLICATION_COPYRIGHT_YEARS "2014")
#SET (APPLICATION_VERSION_MAJOR 1)
#SET (APPLICATION_VERSION_MINOR 0)
#SET (APPLICATION_VERSION_PATCH 0)
#SET (APPLICATION_VERSION_TYPE SNAPSHOT)
#SET (APPLICATION_VERSION_STRING "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}-${APPLICATION_VERSION_TYPE}")
#SET (APPLICATION_VENDOR_ID "com.yourcompany")
#SET (APPLICATION_VENDOR_NAME "Your Company")
#SET (APPLICATION_VENDOR_URL "yourcompany.com")
#SET (APPLICATION_ID "${APPLICATION_VENDOR_ID}.${PROJECT_NAME}")

set(CMAKE_SYSTEM_NAME Linux)

SET(CMAKE_CXX_FLAGS	"${CMAKE_CXX_FLAGS} -std=c++0x -lpthread")

add_subdirectory(include)
add_subdirectory(lib)
add_subdirectory(src)
